[tool.poetry]
name = "snyk-api-tests"
version = "0.1.0"
description = ""
authors = ["Omar Quimbaya <omar.quimbaya4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pysnyk = "^0.6.2"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
